# VendMachine

./: .coverage  README.md  coverage.xml  db.sqlite3  manage.py  pyproject.toml  sonar-project.properties  tox.ini
hw1/: settings.py  urls.py  wsgi.py
src/hw1/: asgi.py  settings.py  urls.py
src/vending/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/vending/migrations/: 0001_initial.py  0003_remove_vendingmachine_balance.py
src/vending/templates/vending/: createSnack.html  createVM.html  home.html  pageNotFound.html  stock.html  vendingMachine.html
vending/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
vending/migrations/: 0001_initial.py  0002_rename_usedquantity_snacks_availablequantity.py  0002_vendingmachine_balance.py  0003_remove_snacks_available.py
vending/templates/vending/: base.html  createSnack.html  createVM.html  home.html  pageNotFound.html  snack.html  stock.html  transaction.html  vendingMachine.html
