[tool.poetry]
name = "Vending Machine Management"
version = "0.1.0"
description = ""
authors = ["frediej <frediejvelazquez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
pytest = "^7.2.1"
django = "^4.1.5"
django-pytest = "^0.2.0"
numpy = "^1.24.1"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
